--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
                     <input id="minmax-range2" type="range" min="30" max="90" value="60" class="w-full h-2 bg-gray-200 rounded-lg cursor-pointer dark:bg-gray-800">
                 </div>
 
-                <div class = "block mx-auto">
+                <!-- <div class = "block mx-auto">
                     <label for="minmax-range2">
                         <strong>Zoom</strong>
                     <input id="minmax-range3" type="range" min="9" max="99" value="54" class="w-full h-2 bg-gray-200 rounded-lg cursor-pointer dark:bg-gray-800">
-                </div>
+                </div> -->
 
                 <div class="flex space-x-4">
                     <input type="checkbox" id="flexCheckChecked" checked>
